# mopenai

./: README.md  pyproject.toml
mopenai/: logs.txt  main.py  main_async.py  main_with_injection.py  openai_service.py
tests/: test_openai.py  test_openai2.py
